# CharlestonMusicLive

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architectural_analysis_1756231591.md  architectural_analysis_1756232358.md  architectural_analysis_1756235522.md  architectural_analysis_1756236447.md  architectural_analysis_1756237022.md  bmad_pipeline_report_1756231088.md  bmad_pipeline_report_1756232475.md  bmad_pipeline_report_1756235647.md  bmad_pipeline_report_1756236576.md  bmad_pipeline_report_1756237154.md  fly.toml  generated_implementation_1756231687.py  generated_implementation_1756232396.py  generated_implementation_1756235568.py  generated_implementation_1756236489.py  generated_implementation_1756237062.py  generated_tests_1756231687.py  generated_tests_1756232396.py  generated_tests_1756235568.py  generated_tests_1756236489.py  generated_tests_1756237062.py  pyproject.toml  test_discover.py  test_extraction.py  test_factory.py  test_music_farm_crawl.py  test_patterns.py  test_report_1756231753.txt  test_report_1756232416.txt  test_report_1756235597.txt  test_report_1756236519.txt  test_report_1756237094.txt
api/: config.py  crawler_control.py  main.py
collector/: artist_researcher.py  cli.py  config.py  error_handler.py  intelligent_crawler.py
config/: production.py
db/: flyway.conf  persistence.py
deploy/: README.md
docs/: BA_Questions.md  Glossary.md  PRD.md  Stories.md
orchestrator/: agents.py  run_architect.py  run_ba.py  run_ba_questions.py  run_bmad_pipeline.py  run_db_modeler.py  run_deployer.py  run_developer.py  (+1 more)
(+33 files in other folders)
